Refactor imports and update dependencies
Standardized import paths for consistency by removing unnecessary `src` prefixes and ensuring proper extensions. Updated workspace dependencies to specific versions, improving stability and reproducibility. Additionally, formatted code for readability in select modules.

--- a/apps/job-search-sync/package.json
+++ b/apps/job-search-sync/package.json
@@ -4,8 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@clerk/backend": "^1.24.1",
-    "@ethang/schemas": "workspace:^",
+    "@ethang/schemas": "^1.0.1",
     "@ethang/toolbelt": "^4.3.2",
     "lodash": "^4.17.21",
     "zod": "^3.24.2"
