--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -6,12 +6,17 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "^21.1.0",
+    "@ethang/project-builder": "^3.0.2",
     "eslint": "^9.20.1"
   },
-  "keywords": [],
   "license": "ISC",
   "name": "@ethang/schemas",
-  "scripts": {},
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "build": "bun build.ts"
+  },
   "type": "module",
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
