Update schema imports to use `.ts` paths and cleanup settings
Migrated schema imports across apps to use `.ts` files instead of `.js` for consistency and improved type resolution. Removed unused `build.ts` file, updated package dependencies, and cleaned up ESLint configuration for better readability and maintainability.

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -29,7 +29,7 @@
     "wrangler": "^3.109.1"
   },
   "dependencies": {
-    "@ethang/schemas": "^1.0.1",
+    "@ethang/schemas": "workspace:^",
     "@ethang/toolbelt": "^4.3.2",
     "bcryptjs": "^3.0.1",
     "jose": "^5.10.0",
