--- a/apps/job-search-sync/package.json
+++ b/apps/job-search-sync/package.json
@@ -4,7 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@ethang/schemas": "^1.0.1",
+    "@ethang/schemas": "workspace:^",
     "@ethang/toolbelt": "^4.3.2",
     "lodash": "^4.17.21",
     "zod": "^3.24.2"
