--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@cortex-js/compute-engine": "^0.28.0",
     "@ethang/hooks": "^2.2.7",
-    "@ethang/schemas": "^1.0.1",
+    "@ethang/schemas": "workspace:^",
     "@ethang/store": "^1.0.15",
     "@ethang/toolbelt": "^4.3.2",
     "@heroui/react": "2.6.14",
