--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
     "ms": "^2.1.3",
+    "next-themes": "^0.4.4",
     "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
