--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,6 +11,7 @@
     "@cspell/eslint-plugin": "^8.17.3",
     "@eslint-react/eslint-plugin": "^1.26.2",
     "@eslint/compat": "^1.2.6",
+    "@eslint/css": "0.2.0",
     "@eslint/js": "^9.20.0",
     "@eslint/json": "^0.10.0",
     "@eslint/markdown": "^6.2.2",
@@ -64,5 +65,5 @@
     "lint": "eslint . --fix && prettier src --write"
   },
   "type": "module",
-  "version": "21.1.0"
+  "version": "21.2.0"
 }
