--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   },
   "author": "Ethan Glover",
   "license": "ISC",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild",
+      "sharp",
+      "workerd"
+    ]
+  },
   "devDependencies": {
-    "@ethang/eslint-config": "^21.1.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "@ethang/eslint-config": "^21.2.0",
+    "eslint": "^9.20.1"
   }
 }
