--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -5,7 +5,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^21.1.0",
+    "@ethang/eslint-config": "^21.2.0",
     "@ethang/project-builder": "^3.0.2",
     "eslint": "^9.20.1"
   },
@@ -14,8 +14,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "type": "module",
   "version": "1.0.1"
 }
