--- a/apps/extract/package.json
+++ b/apps/extract/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
     "typescript": "^5.5.2",
+    "typescript-eslint": "^8.24.1",
     "vitest": "3.0.6",
     "wrangler": "^3.109.1"
   },
