--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "^21.2.1",
-    "eslint": "^9.20.1"
+    "eslint": "^9.20.1",
+    "typescript-eslint": "^8.24.1"
   }
 }
