Sort JSON files consistently across the codebase.
Introduced a utility script (`sort-all-json.ts`) to apply consistent formatting to JSON files. Updated JSON files, including `package.json` and `tsconfig.json`, to align with the new formatting standards.

--- a/apps/rss/tsconfig.json
+++ b/apps/rss/tsconfig.json
@@ -1,15 +1,24 @@
 {
-	"compilerOptions": {
-		"baseUrl": "src",
-		"outDir": "dist",
-		"rootDir": ".",
-		"types": [
-			"@types/node",
-			"@types/service-worker-mock",
-			"@cloudflare/workers-types/2023-07-01"
-		]
-	},
-	"exclude": ["node_modules", "dist", "tests"],
-	"extends": ["../../packages/tsconfig/tsconfig.base.json"],
-	"include": ["src", "scripts"]
+  "compilerOptions": {
+    "baseUrl": "src",
+    "outDir": "dist",
+    "rootDir": ".",
+    "types": [
+      "@types/node",
+      "@types/service-worker-mock",
+      "@cloudflare/workers-types/2023-07-01"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests"
+  ],
+  "extends": [
+    "../../packages/tsconfig/tsconfig.base.json"
+  ],
+  "include": [
+    "src",
+    "scripts"
+  ]
 }
