--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "auth",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=22"
-  },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
-  "scripts": {
-    "build": "pnpm cf-typegen && wrangler deploy --dry-run --outdir=dist",
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "cf-typegen": "wrangler types",
-    "lint": "pnpm cf-typegen && eslint src --fix"
+  "dependencies": {
+    "@ethang/schemas": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
+    "bcryptjs": "^3.0.1",
+    "jose": "^5.10.0",
+    "lodash": "^4.17.21",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.7.0",
@@ -28,12 +21,19 @@
     "typescript": "^5.7.3",
     "wrangler": "^3.109.1"
   },
-  "dependencies": {
-    "@ethang/schemas": "workspace:^",
-    "@ethang/toolbelt": "^4.3.2",
-    "bcryptjs": "^3.0.1",
-    "jose": "^5.10.0",
-    "lodash": "^4.17.21",
-    "zod": "^3.24.2"
-  }
+  "engines": {
+    "node": ">=22"
+  },
+  "name": "auth",
+  "private": true,
+  "scripts": {
+    "build": "pnpm cf-typegen && wrangler deploy --dry-run --outdir=dist",
+    "cf-typegen": "wrangler types",
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "lint": "pnpm cf-typegen && eslint src --fix",
+    "start": "wrangler dev"
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
