--- a/apps/comments/package.json
+++ b/apps/comments/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "comments",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=22.4"
-  },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
-  "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "cf-typegen": "wrangler types",
-    "lint": "pnpm cf-typegen && eslint src --fix"
+  "dependencies": {
+    "@ethang/toolbelt": "^4.3.2",
+    "eslint": "^9.20.1",
+    "lodash": "^4.17.21",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.7.0",
@@ -26,11 +19,18 @@
     "typescript": "^5.5.2",
     "wrangler": "^3.109.1"
   },
-  "dependencies": {
-    "@ethang/toolbelt": "^4.3.2",
-    "eslint": "^9.20.1",
-    "lodash": "^4.17.21",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.2"
-  }
+  "engines": {
+    "node": ">=22.4"
+  },
+  "name": "comments",
+  "private": true,
+  "scripts": {
+    "cf-typegen": "wrangler types",
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "lint": "pnpm cf-typegen && eslint src --fix",
+    "start": "wrangler dev"
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
