--- a/apps/comments/tsconfig.json
+++ b/apps/comments/tsconfig.json
@@ -1,10 +1,17 @@
 {
-	"extends": ["../../packages/tsconfig/tsconfig.base.json"],
-	"compilerOptions": {
-		"types": [
-			"@cloudflare/workers-types/2023-07-01"
-		]
-	},
-	"exclude": ["test"],
-	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
+  "compilerOptions": {
+    "types": [
+      "@cloudflare/workers-types/2023-07-01"
+    ]
+  },
+  "exclude": [
+    "test"
+  ],
+  "extends": [
+    "../../packages/tsconfig/tsconfig.base.json"
+  ],
+  "include": [
+    "worker-configuration.d.ts",
+    "src/**/*.ts"
+  ]
 }
