--- a/apps/ethang-vanilla/tsconfig.json
+++ b/apps/ethang-vanilla/tsconfig.json
@@ -1,4 +1,8 @@
 {
-	"extends": ["../../packages/tsconfig/tsconfig.base.json"],
-	"include": ["src/**/*.ts"]
+  "extends": [
+    "../../packages/tsconfig/tsconfig.base.json"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
