--- a/apps/sterett-react/tsconfig.json
+++ b/apps/sterett-react/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["../../packages/tsconfig/tsconfig.react.json"]
+  "extends": [
+    "../../packages/tsconfig/tsconfig.react.json"
+  ]
 }
