--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -1,13 +1,13 @@
 {
-    "compilerOptions": {
-        "target": "ES2019",
-        "module": "CommonJS",
-        "strict": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true
-    },
-    "files": [
-        "index.ts"
-    ]
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "module": "CommonJS",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2019"
+  },
+  "files": [
+    "index.ts"
+  ]
 }
