--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "@ethang/hooks",
-  "version": "2.3.0",
-  "description": "",
-  "repository": "https://github.com/eglove/hooks",
-  "license": "ISC",
   "author": "Ethan Glover",
-  "type": "module",
-  "scripts": {
-    "build": "bun build.ts",
-    "lint": "eslint src/ --fix"
-  },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
@@ -20,6 +10,7 @@
     "react": "^19.0.0",
     "zod": "^3.24.2"
   },
+  "description": "",
   "devDependencies": {
     "@ethang/eslint-config": "^21.2.1",
     "@ethang/project-builder": "^3.0.2",
@@ -30,5 +21,14 @@
   },
   "engines": {
     "node": ">22.0"
-  }
+  },
+  "license": "ISC",
+  "name": "@ethang/hooks",
+  "repository": "https://github.com/eglove/hooks",
+  "scripts": {
+    "build": "bun build.ts",
+    "lint": "eslint src/ --fix"
+  },
+  "type": "module",
+  "version": "2.3.0"
 }
