--- a/packages/toolbelt/package.json
+++ b/packages/toolbelt/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@total-typescript/ts-reset": "^0.6.1",
     "lodash": "^4.17.21",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
