--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -9,6 +9,7 @@
   },
   "description": "Fine grained state management",
   "devDependencies": {
+    "@ethang/eslint-config": "^21.2.5",
     "@ethang/project-builder": "^3.0.2",
     "eslint": "^9.21.0"
   },
