Upgrade dependencies and add user-store effect.
Updated multiple dependencies across projects, including `@ethang/store` to `v1.2.0` and various Sanity packages to `v3.77.2`. Introduced a new effect in the `user-store` to trigger data backup on user sign-in. This ensures compatibility improvements and additional functionality.

--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -16,6 +16,9 @@
     "eslint": "^9.21.0",
     "vitest": "^3.0.7"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "license": "ISC",
   "main": "index.js",
   "name": "@ethang/store",
