Refactor data mutations and queries by modularizing methods
Moved mutation and query logic to dedicated methods for improved separation of concerns and maintainability. Removed `mutationCache` and centralized the fetch logic for job applications and Q&As. Simplified component hooks by directly integrating new modularized methods.

--- a/apps/job-search/wrangler.jsonc
+++ b/apps/job-search/wrangler.jsonc
@@ -4,7 +4,7 @@
   "observability": {
     "enabled": true
   },
-  "nodejs_compat": true,
+  "compatibility_flags": ["nodejs"],
   "pages_build_output_dir": "dist",
   "placement": { "mode": "smart" }
 }
