Add global stats page and local seeding functionality
This commit introduces a "Global Stats" page to the navigation and associated routes. It also includes a local seeding utility for populating data, available only in a dev environment, along with updates to handle 401 responses in delete-job-application and delete-qa methods. Minor improvements include consistent formatting and additional cspell dictionary entries.

--- a/apps/job-search-sync/wrangler.jsonc
+++ b/apps/job-search-sync/wrangler.jsonc
@@ -6,8 +6,9 @@
   "observability": {
     "enabled": true
   },
-  "nodejs_compat": true,
-   "placement": { "mode": "smart" },
+  "placement": {
+    "mode": "smart"
+  },
   "d1_databases": [
     {
       "binding": "DB",
