--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^21.4.4",
+    "@ethang/eslint-config": "^21.4.6",
     "eslint": "^9.21.0",
     "typescript-eslint": "^8.26.0"
   },
@@ -19,7 +19,7 @@
   "scripts": {
     "all": "pnpm approve-builds && pnpm i && pnpm deps && pnpm test && pnpm lint && pnpm build && pnpm prune",
     "build": "pnpm -r build",
-    "deps": "pnpm up -r -i --latest && pnpm --filter eslint-config build",
+    "deps": "pnpm up -r -i --latest",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test"
   },
