--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -12,18 +12,20 @@
     "@heroui/react": "2.7.4",
     "@heroui/system": "2.4.11",
     "@heroui/theme": "2.4.11",
-    "@tanstack/query-sync-storage-persister": "^5.67.1",
-    "@tanstack/react-form": "^1.0.0",
-    "@tanstack/react-query": "^5.67.1",
-    "@tanstack/react-query-devtools": "^5.67.1",
-    "@tanstack/react-query-persist-client": "^5.67.1",
-    "@tanstack/react-router": "^1.112.13",
+    "@paypal/paypal-js": "^8.2.0",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@tanstack/query-sync-storage-persister": "^5.67.2",
+    "@tanstack/react-form": "^1.0.2",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query-devtools": "^5.67.2",
+    "@tanstack/react-query-persist-client": "^5.67.2",
+    "@tanstack/react-router": "^1.112.18",
     "@tanstack/react-table": "^8.21.2",
     "framer-motion": "^12.4.10",
     "idb": "^8.0.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "ms": "^2.1.3",
     "next-themes": "^0.4.4",
@@ -37,10 +39,10 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250303.0",
-    "@ethang/eslint-config": "^21.4.6",
-    "@react-types/shared": "^3.27.0",
-    "@tanstack/router-devtools": "^1.112.13",
-    "@tanstack/router-plugin": "^1.112.13",
+    "@ethang/eslint-config": "^21.4.7",
+    "@react-types/shared": "^3.28.0",
+    "@tanstack/router-devtools": "^1.112.18",
+    "@tanstack/router-plugin": "^1.112.19",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.4.2",
@@ -56,9 +58,9 @@
     "tailwindcss": "3",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.0",
+    "vite": "^6.2.1",
     "vite-plugin-pwa": "^0.21.1",
-    "wrangler": "^3.112.0"
+    "wrangler": "^3.114.0"
   },
   "engines": {
     "node": ">= 22"
