--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "author": "Ethan Glover",
   "devDependencies": {
     "@ethang/eslint-config": "^21.5.2",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "typescript-eslint": "^8.27.0"
   },
   "license": "ISC",
   "name": "ethang-monorepo",
   "pnpm": {
+    "overrides": {
+      "tailwindcss": "<4"
+    },
     "onlyBuiltDependencies": [
       "@heroui/shared-utils",
       "@prisma/client",
