--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -4,6 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@ethang/hooks": "^2.3.1",
     "@heroicons/react": "^2.2.0",
     "@heroui/avatar": "2.2.12",
