--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -13,7 +13,7 @@
   },
   "description": "",
   "devDependencies": {
-    "@ethang/eslint-config": "^21.5.2",
+    "@ethang/eslint-config": "^21.5.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/lodash": "^4.17.16",
@@ -24,7 +24,7 @@
     "eslint": "^9.23.0",
     "http-server": "^14.1.1",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "workbox-build": "^7.3.0"
   },
   "keywords": [],
