--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -38,8 +38,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250320.0",
-    "@ethang/eslint-config": "^21.5.2",
+    "@cloudflare/workers-types": "^4.20250321.0",
+    "@ethang/eslint-config": "^21.5.3",
     "@react-types/shared": "^3.28.0",
     "@tanstack/router-devtools": "^1.114.27",
     "@tanstack/router-plugin": "^1.114.27",
@@ -55,7 +55,7 @@
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "3",
+    "tailwindcss": "<4",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.27.0",
     "vite": "^6.2.2",
