--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -44,7 +44,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^21.5.2",
+    "@ethang/eslint-config": "^21.5.3",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.28.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -62,7 +62,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
     "vite": "^6.2.2",
