Add delete user data functionality to job search app
Introduced a `DeleteUserData` component allowing users to remove all their data. Updated schemas to handle nullable fields, adjusted `get-user-stats` to return null on invalid responses, and integrated delete action into data backup routes. Added new dependencies and updated URLs to support the deletion process.

--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.6.0",
     "idb": "^8.0.2",
     "immer": "^10.1.1",
+    "jose": "^6.0.10",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "luxon": "^3.6.0",
