--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -9,7 +9,8 @@
     "highlight.js": "^11.11.1",
     "html-minifier-terser": "^7.2.0",
     "lodash": "^4.17.21",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "wrangler": "^4.5.1"
   },
   "description": "",
   "devDependencies": {
