--- a/apps/extract/package.json
+++ b/apps/extract/package.json
@@ -9,15 +9,15 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.8.8",
-    "@cloudflare/workers-types": "^4.20250402.0",
+    "@cloudflare/vitest-pool-workers": "^0.8.9",
+    "@cloudflare/workers-types": "^4.20250403.0",
     "@ethang/eslint-config": "^21.5.9",
     "@types/lodash": "^4.17.16",
     "eslint": "^9.23.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0",
     "vitest": "3.1.1",
-    "wrangler": "^4.6.0"
+    "wrangler": "^4.7.0"
   },
   "engines": {
     "node": ">=22"
@@ -28,7 +28,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "lint": "eslint src --fix",
+    "lint": "pnpm cf-typegen && eslint src --fix",
     "start": "wrangler dev"
   },
   "type": "module",
