--- a/apps/job-search/wrangler.jsonc
+++ b/apps/job-search/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
+  "compatibility_date": "2025-04-04",
   "name": "job-search",
   "observability": {
     "enabled": true
