--- a/apps/comments/package.json
+++ b/apps/comments/package.json
@@ -11,13 +11,13 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.8.9",
-    "@cloudflare/workers-types": "^4.20250403.0",
+    "@cloudflare/vitest-pool-workers": "^0.8.10",
+    "@cloudflare/workers-types": "^4.20250404.0",
     "@ethang/eslint-config": "^21.5.9",
     "@types/lodash": "^4.17.16",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.8.2",
-    "wrangler": "^4.7.0"
+    "wrangler": "^4.7.1"
   },
   "engines": {
     "node": ">=22.4"
@@ -28,7 +28,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "lint": "pnpm cf-typegen && eslint src --fix",
+    "lint": "eslint src --fix",
     "start": "wrangler dev"
   },
   "type": "module",
