Remove all files under apps/extract and apps/rss.
This commit eliminates the entirety of the `extract` and `rss` applications, including source code, configurations, dependencies, migrations, middleware, and other project files. This indicates deprecation or the cessation of these services.

--- a/apps/auth/wrangler.jsonc
+++ b/apps/auth/wrangler.jsonc
@@ -4,12 +4,12 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_id": "fdce8bd6-b4ec-4c86-a36e-1233dfd96881",
-      "database_name": "job-sync"
+      "database_id": "76d8c700-ba4d-49fe-a6c8-587f940f6960",
+      "database_name": "auth-db"
     }
   ],
   "main": "src/index.ts",
-  "name": "job-search-sync",
+  "name": "comments",
   "observability": {
     "enabled": true
   },
