--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -7,7 +7,19 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@ethang/hooks": "^2.3.1",
     "@heroicons/react": "^2.2.0",
+    "@heroui/avatar": "2.2.13",
+    "@heroui/button": "2.2.17",
+    "@heroui/card": "2.2.16",
+    "@heroui/divider": "2.2.11",
+    "@heroui/image": "2.2.10",
+    "@heroui/link": "2.2.14",
+    "@heroui/modal": "2.2.14",
+    "@heroui/navbar": "2.2.15",
     "@heroui/react": "2.7.6",
+    "@heroui/system": "2.4.13",
+    "@heroui/table": "2.2.16",
+    "@heroui/theme": "2.4.13",
+    "@heroui/user": "2.2.13",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.28.4",
     "@sanity/image-url": "^1.1.0",
