Add Storybook setup and calendar components to react-components
This commit introduces Storybook setup and configuration for the react-components package, enabling component previews and testing. It also adds several calendar-related components, utilities, and ESLint rules updates, improving the package's functionality and code quality.

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ storybook-static/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/node,react,jetbrains+all,visualstudiocode,storybookjs
+*storybook.log
