--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -4,6 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@ethang/hooks": "^2.3.1",
     "@ethang/store": "^1.2.1",
     "@heroui/button": "2.2.17",
     "@heroui/dropdown": "^2.3.17",
@@ -53,7 +54,7 @@
   "engines": {
     "node": ">=22"
   },
-  "name": "react-components",
+  "name": "@ethang/react-components",
   "private": true,
   "scripts": {
     "build-storybook": "storybook build",
