Add tsc-prog for declaration builds and update dependencies
Introduce `tsc-prog` to generate declaration files separately, enhancing the TypeScript build process. Update multiple package dependencies, including `@ethang/eslint-config` and `@tanstack` libraries, to their latest versions, improving compatibility and resolving identified issues. Also, update a Google Calendar embed link and various configuration files for better formatting and accuracy.

--- a/apps/sanity-calendar-sync/wrangler.jsonc
+++ b/apps/sanity-calendar-sync/wrangler.jsonc
@@ -1,10 +1,12 @@
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "sanity-calendar-sync",
-	"main": "src/index.ts",
-	"compatibility_date": "2025-04-07",
-	"observability": {
-		"enabled": true
-	},
-	"placement": { "mode": "smart" }
+  "$schema": "node_modules/wrangler/config-schema.json",
+  "compatibility_date": "2025-04-07",
+  "main": "src/index.ts",
+  "name": "sanity-calendar-sync",
+  "observability": {
+    "enabled": true
+  },
+  "placement": {
+    "mode": "smart"
+  }
 }
