--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -14,12 +14,12 @@
     "@heroui/theme": "2.4.13",
     "@paypal/paypal-js": "^8.2.0",
     "@paypal/react-paypal-js": "^8.8.2",
-    "@tanstack/query-sync-storage-persister": "^5.72.0",
+    "@tanstack/query-sync-storage-persister": "^5.72.1",
     "@tanstack/react-form": "^1.3.0",
-    "@tanstack/react-query": "^5.72.0",
-    "@tanstack/react-query-devtools": "^5.72.0",
-    "@tanstack/react-query-persist-client": "^5.72.0",
-    "@tanstack/react-router": "^1.115.0",
+    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.72.1",
+    "@tanstack/react-query-persist-client": "^5.72.1",
+    "@tanstack/react-router": "^1.115.2",
     "@tanstack/react-table": "^8.21.2",
     "framer-motion": "^12.6.3",
     "idb": "^8.0.2",
@@ -34,16 +34,16 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.2",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "<3",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250407.0",
-    "@ethang/eslint-config": "^21.5.11",
+    "@ethang/eslint-config": "^21.7.2",
     "@react-types/shared": "^3.28.0",
-    "@tanstack/router-devtools": "^1.115.0",
-    "@tanstack/router-plugin": "^1.115.0",
+    "@tanstack/router-devtools": "^1.115.2",
+    "@tanstack/router-plugin": "^1.115.2",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
@@ -58,7 +58,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0",
     "wrangler": "^4.8.0"
