--- a/apps/sanity-calendar-sync/package.json
+++ b/apps/sanity-calendar-sync/package.json
@@ -8,12 +8,12 @@
     "ts-ics": "^2.0.1"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.7.5",
+    "@cloudflare/vitest-pool-workers": "^0.8.12",
     "@cloudflare/workers-types": "^4.20250407.0",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
     "typescript": "^5.5.2",
-    "vitest": "~3.0.7",
+    "vitest": "~3.1.1",
     "wrangler": "^4.8.0"
   },
   "name": "sanity-calendar-sync",
@@ -22,8 +22,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest"
+    "start": "wrangler dev"
   },
   "version": "0.0.0"
 }
