--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -23,13 +23,13 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.28.4",
     "@sanity/image-url": "^1.1.0",
-    "@tanstack/query-async-storage-persister": "^5.72.0",
-    "@tanstack/query-sync-storage-persister": "^5.72.0",
-    "@tanstack/react-query": "^5.72.0",
-    "@tanstack/react-query-devtools": "^5.72.0",
-    "@tanstack/react-query-persist-client": "^5.72.0",
-    "@tanstack/react-router": "^1.115.0",
-    "@tanstack/router-devtools": "^1.115.0",
+    "@tanstack/query-async-storage-persister": "^5.72.1",
+    "@tanstack/query-sync-storage-persister": "^5.72.1",
+    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.72.1",
+    "@tanstack/react-query-persist-client": "^5.72.1",
+    "@tanstack/react-router": "^1.115.2",
+    "@tanstack/router-devtools": "^1.115.2",
     "calendar-link": "^2.8.0",
     "framer-motion": "^12.6.3",
     "idb-keyval": "^6.2.1",
@@ -40,11 +40,11 @@
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.1.0",
     "sanity-image": "^1.0.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "<3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^21.5.11",
+    "@ethang/eslint-config": "^21.7.2",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.28.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -64,7 +64,7 @@
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0"
   },
