--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -20,10 +20,10 @@
     "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "<3"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^21.7.1",
+    "@ethang/eslint-config": "^21.7.2",
     "@ethang/project-builder": "^3.0.2",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/blocks": "8.6.12",
@@ -44,10 +44,10 @@
     "playwright": "^1.51.1",
     "postcss": "^8.5.3",
     "storybook": "8.6.12",
-    "tailwindcss": "3",
+    "tailwindcss": "<4",
     "tsc-prog": "^2.3.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.2.0",
     "vitest": "^3.1.1"
   },
