--- a/apps/job-search/wrangler.jsonc
+++ b/apps/job-search/wrangler.jsonc
@@ -1,9 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "compatibility_date": "2025-04-07",
-  "compatibility_flags": [
-    "nodejs"
-  ],
+  "compatibility_date": "2025-04-08",
+  "compatibility_flags": ["nodejs"],
   "name": "job-search",
   "observability": {
     "enabled": true
