--- a/apps/sanity-calendar-sync/tsconfig.json
+++ b/apps/sanity-calendar-sync/tsconfig.json
@@ -1,17 +1,8 @@
 {
   "compilerOptions": {
-    "types": [
-      "@cloudflare/workers-types/2025-04-07"
-    ]
+    "types": ["@cloudflare/workers-types/2025-04-08"]
   },
-  "exclude": [
-    "test"
-  ],
-  "extends": [
-    "../../packages/tsconfig/tsconfig.base.json"
-  ],
-  "include": [
-    "worker-configuration.d.ts",
-    "src/**/*.ts"
-  ]
+  "exclude": ["test"],
+  "extends": ["../../packages/tsconfig/tsconfig.base.json"],
+  "include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
