Update lint script to target 'src' directory
Previously, the lint script targeted the entire project. This change narrows the scope to the 'src' directory, improving performance and focusing on relevant files.

--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -32,7 +32,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "astro build && wrangler deploy",
     "dev": "astro dev",
-    "lint": "eslint . --fix",
+    "lint": "eslint src --fix",
     "preview": "astro build && wrangler dev"
   },
   "type": "module",
