--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -10,15 +10,15 @@
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
-    "@cloudflare/workers-types": "^4.20250408.0",
-    "@ethang/eslint-config": "^21.7.2",
+    "@cloudflare/workers-types": "^4.20250409.0",
+    "@ethang/eslint-config": "^21.7.3",
     "@tailwindcss/typography": "^0.5.16",
-    "daisyui": "^5.0.16",
+    "daisyui": "^5.0.17",
     "eslint": "^9.24.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "sharp": "^0.34.1",
-    "tailwindcss": "3",
+    "tailwindcss": "<4",
     "typescript-eslint": "^8.29.1",
     "wrangler": "^4.9.1"
   },
