--- a/apps/ethang-astro/tsconfig.json
+++ b/apps/ethang-astro/tsconfig.json
@@ -1,15 +1,8 @@
 {
   "compilerOptions": {
-    "types": [
-      "@cloudflare/workers-types/2023-07-01"
-    ]
+    "types": ["@cloudflare/workers-types/2025-04-09"]
   },
-  "exclude": [
-    "dist"
-  ],
+  "exclude": ["dist"],
   "extends": "astro/tsconfigs/strict",
-  "include": [
-    ".astro/types.d.ts",
-    "**/*"
-  ]
+  "include": [".astro/types.d.ts", "**/*"]
 }
