Remove deprecated Cloudflare workers types and update deps
Removed `@cloudflare/workers-types` from various tsconfigs and dependencies as it is no longer required. Updated several dependencies, including `@ethang/eslint-config` and `@tanstack/react-query`, to their latest versions. Adjusted related configuration files and scripts to align with these updates.

--- a/packages/tsconfig/tsconfig.base.json
+++ b/packages/tsconfig/tsconfig.base.json
@@ -1,9 +1,19 @@
 {
-  "extends": ["@tsconfig/node-lts/tsconfig.json", "@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "allowJs": true,
-    "lib": ["DOM", "ESNext"],
-    "types": ["node", "vite/client"]
-  }
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
+    "types": [
+      "node",
+      "vite/client"
+    ]
+  },
+  "extends": [
+    "@tsconfig/node-lts/tsconfig.json",
+    "@tsconfig/strictest/tsconfig.json"
+  ]
 }
