--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.4.0",
     "astro": "^5.6.1",
-    "highlight.js": "^11.11.1"
+    "highlight.js": "^11.11.1",
+    "luxon": "^3.6.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@ethang/eslint-config": "^21.7.5",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/luxon": "^3.6.2",
     "daisyui": "^5.0.18",
     "eslint": "^9.24.0",
     "prettier": "^3.5.3",
