--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^21.7.5",
-    "@types/node": "^22.14.0",
+    "@ethang/eslint-config": "^21.8.0",
+    "@types/node": "^22.14.1",
     "eslint": "^9.24.0",
     "typescript-eslint": "^8.29.1"
   },
@@ -11,6 +11,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@heroui/shared-utils",
+      "@parcel/watcher",
       "@prisma/client",
       "@swc/core",
       "esbuild",
