--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,14 +11,14 @@
     "@cspell/eslint-plugin": "^8.19.2",
     "@eslint-react/eslint-plugin": "^1.48.4",
     "@eslint/css": "0.7.0",
-    "@eslint/js": "^9.25.0",
+    "@eslint/js": "^9.25.1",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
     "@tanstack/eslint-plugin-query": "^5.73.3",
     "@tanstack/eslint-plugin-router": "^1.115.0",
-    "@typescript-eslint/parser": "^8.30.1",
+    "@typescript-eslint/parser": "^8.31.0",
     "angular-eslint": "19.3.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-barrel-files": "^3.0.1",
@@ -26,9 +26,9 @@
     "eslint-plugin-depend": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-lodash": "^8.0.0",
-    "eslint-plugin-perfectionist": "^4.11.0",
+    "eslint-plugin-perfectionist": "^4.12.1",
     "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "eslint-plugin-react-compiler": "19.1.0-rc.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-sonarjs": "3.0.2",
@@ -36,7 +36,7 @@
     "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unicorn": "^58.0.0",
     "prettier": "^3.5.3",
-    "typescript-eslint": "^8.30.1"
+    "typescript-eslint": "^8.31.0"
   },
   "devDependencies": {
     "@ethang/markdown-generator": "^1.1.5",
@@ -63,5 +63,5 @@
     "lint": "eslint . --fix && prettier src --write"
   },
   "type": "module",
-  "version": "21.8.9"
+  "version": "21.8.11"
 }
