--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -28,8 +28,7 @@
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-perfectionist": "^4.12.3",
     "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-react-compiler": "19.1.0-rc.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0-rc.1",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-sonarjs": "3.0.2",
     "eslint-plugin-storybook": "^0.12.0",
@@ -63,5 +62,5 @@
     "lint": "eslint . --fix && prettier src --write"
   },
   "type": "module",
-  "version": "21.8.13"
+  "version": "21.8.14"
 }
