--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "ISC",
   "name": "ethang-monorepo",
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@heroui/shared-utils",
@@ -33,6 +34,5 @@
     "test": "pnpm -r test"
   },
   "type": "module",
-  "version": "1.0.0",
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+  "version": "1.0.0"
 }
