--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 **/.sanity/
+.junie
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,jetbrains+all,visualstudiocode,storybookjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,jetbrains+all,visualstudiocode,storybookjs
