--- a/templates/react-vite/tsconfig.worker.json
+++ b/templates/react-vite/tsconfig.worker.json
@@ -1,8 +1,14 @@
 {
-  "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": ["@cloudflare/workers-types/2023-07-01", "vite/client"]
+    "types": [
+      "@cloudflare/workers-types/2023-07-01",
+      "vite/client"
+    ]
   },
-  "include": ["./worker-configuration.d.ts", "./worker"]
+  "extends": "./tsconfig.node.json",
+  "include": [
+    "./worker-configuration.d.ts",
+    "./worker"
+  ]
 }
