--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -4,6 +4,8 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@heroui/react": "2.7.8",
+    "framer-motion": "^12.9.4",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
