Add Todo table schema, TS reset, and update ESLint config
This commit introduces a new SQL migration for creating the `Todo` table with `id`, `name`, and `due` fields. TypeScript reset has been added for robust typings, and the ESLint configuration now ignores the `routeTree.gen.ts` file. Additionally, package dependencies are updated, including Prisma and Better SQLite support.

--- a/apps/job-search/wrangler.jsonc
+++ b/apps/job-search/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "compatibility_date": "2025-05-04",
-  "compatibility_flags": ["nodejs"],
+  "compatibility_flags": ["nodejs_compat"],
   "name": "job-search",
   "observability": {
     "enabled": true
