--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -4,28 +4,32 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.119.1",
+    "d1-orm": "^0.9.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lodash": "^4.17.21",
+    "luxon": "^3.6.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.1.0",
-    "@cloudflare/workers-types": "^4.20250504.0",
-    "@eslint/js": "^9.22.0",
     "@ethang/eslint-config": "^21.9.2",
     "@tanstack/router-plugin": "^1.119.0",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
