--- a/templates/react-vite/tsconfig.json
+++ b/templates/react-vite/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"types": [
 			"@cloudflare/workers-types/2023-07-01",
-			"vite/client"
+			"vite/client",
+			"node"
 		]
 	},
 	"extends": ["../../packages/tsconfig/tsconfig.react.json"],
