--- a/templates/react-vite/wrangler.jsonc
+++ b/templates/react-vite/wrangler.jsonc
@@ -4,6 +4,16 @@
     "not_found_handling": "single-page-application"
   },
   "compatibility_date": "2025-05-04",
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_id": "da6110de-49cc-47e0-bb4c-d338c4a21339",
+      "database_name": "react-vite-template"
+    }
+  ],
   "main": "worker/index.ts",
   "name": "react-vite",
   "observability": {
