--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
+    "@heroui/theme": "2.4.15",
+    "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.119.1",
     "d1-orm": "^0.9.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.507.0",
     "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
