--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -7,18 +7,23 @@
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
+    "@tanstack/query-async-storage-persister": "^5.75.0",
     "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query-devtools": "^5.75.2",
+    "@tanstack/react-query-persist-client": "^5.75.2",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.119.1",
     "d1-orm": "^0.9.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
+    "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.507.0",
     "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
+    "vite-plugin-pwa": "^1.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
@@ -44,7 +50,7 @@
   "name": "react-vite",
   "private": true,
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "rimraf dist && tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
