--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -8,6 +8,7 @@
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
     "@tanstack/query-async-storage-persister": "^5.75.0",
+    "@tanstack/react-form": "^1.9.0",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
     "@tanstack/react-query-persist-client": "^5.75.2",
