Add Prisma client and related dependencies to package.json
This commit updates `onlyBuiltDependencies` in `package.json` by including `@prisma/client`, `@prisma/engines`, and `prisma`. The changes also update `pnpm-lock.yaml` to reflect these additions and revise dependency version details for consistency across the project.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "onlyBuiltDependencies": [
       "@heroui/shared-utils",
       "@parcel/watcher",
+      "@prisma/client",
+      "@prisma/engines",
       "@swc/core",
       "esbuild",
       "msw",
+      "prisma",
       "scrollmirror",
       "sharp",
       "workerd",
