--- a/templates/react-vite/wrangler.jsonc
+++ b/templates/react-vite/wrangler.jsonc
@@ -3,10 +3,8 @@
   "assets": {
     "not_found_handling": "single-page-application"
   },
-  "compatibility_date": "2025-05-04",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
+  "compatibility_date": "2025-05-06",
+  "compatibility_flags": ["nodejs_compat"],
   "d1_databases": [
     {
       "binding": "DB",
