Improve CI workflow with caching and build optimizations
Added caching for Playwright browsers, Bun installation, and build outputs to improve workflow efficiency. Updated dependency installation steps to include `pnpm approve-builds` for build validation. These changes enhance build performance and reduce redundant downloads during CI runs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,24 +10,60 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: "pnpm"
+
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install && pnpm approve-builds
+
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            playwright-${{ runner.os }}-
+
       - name: Install Playwright
         run: pnpx playwright install --with-deps
+
+      - name: Cache Bun installation
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun
+          key: bun-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
+
       - name: Install Bun
         run: pnpm i -g bun
+
+      - name: Cache build outputs
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/dist
+            **/build
+            **/.next
+            **/.astro
+          key: build-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            build-${{ runner.os }}-
+
       - name: Build
         run: pnpm run build
+
       - name: Run Tests
         run: pnpm run test
+
       - name: Run lint
         run: pnpm run lint
