Remove unnecessary 'pnpm approve-builds' from CI workflow
The 'pnpm approve-builds' command was redundant in this context and has been removed for better efficiency. All necessary dependencies are still installed with 'pnpm install'.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Dependencies
-        run: pnpm install && pnpm approve-builds
+        run: pnpm install
 
       - name: Cache Playwright browsers
         uses: actions/cache@v4
